DOMjudge Programming Contest Judging System

Version 3.0.4 - SVN
-------------------
 - Fix Makefile rules for building library objects.
 - Workaround sorttable colspan bug and use stable sorting.
 - Small documentation fixes.

Version 3.0.3 - 11 July 2010
----------------------------
 - Fix bug in handling of libmagic cookie.
 - Fix some HTML escaping issues found with skipfish.
 - Fix CSS link in admin/jury HTML documentation.
 - In chroot-startstop, cope properly with /lib64 being a symlink to
   /lib. Thanks Christoph Dittmann.
 - Fix SQL syntax error in restore_sources2db script.
 - Upgrade included dash shell to version 0.5.5.1-6.
 - Fix swapped error messages in submit client.
 - Correctly handle empty optional diff file argument.
 - Include standard C headers in misc/scanner.h.

Version 3.0.2 - 13 February 2010
--------------------------------
 - Re-fix an incorrect LIBWWWDIR path.
 - Correct presentation error exit code in test_solution.sh.

Version 3.0.1 - 28 January 2010
-------------------------------
 - Many small documentation improvements.
 - Fix include paths when defining custom LIBWWWDIR, LIBJUDGEDIRs.
 - Plugin interface: correct SQL privileges for domjudge_plugin user.
 - Plugin interface: correct type of best_time to string and unset
   large variable after use.
 - Plugin interface: also generate required XML elements when no
   contest active.
 - Remove dbpasswords.secret and htpasswd-jury in distclean target.
 - Also support htpasswd2 as program name for Apache's htpasswd.
 - Bugfix: allow zero size testcases (port from ETH tree).

Version 3.0.0 - 21 October 2009
-------------------------------
 - Bugfixes and improvements to checktestdata program.
 - Fix error trapping in subshells, thanks Jan Jergus. (Closes: #2866430)
 - Fix bug in lib.database.php with array_map "class::method" notation.
 - Multiple admin manual improvements.
 - Added 'make check' dependency on submitclient.