@@ -5,6 +5,7 @@ Version 3.0.4 - SVN
  - Fix Makefile rules for building library objects.
  - Workaround sorttable colspan bug and use stable sorting.
  - Small documentation fixes.
+ - Fix expected output for reboot test-source.
 
 Version 3.0.3 - 11 July 2010
 ----------------------------
